fixing small errors with menus and overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -168,7 +168,7 @@ p {
 }
 
 @media screen and (min-width: 992px) {
-  .section-centre {
+  .section-center {
     width: 95%;
   }
 }
@@ -539,6 +539,7 @@ Featured Tours
 Contact
 ===============
 */
+
 .contact {
   background: var(--clr-primary-5);
 }
@@ -548,65 +549,42 @@ Contact
 .contact-title p {
   color: var(--clr-primary-8);
 }
-
 .contact-form {
   display: flex;
+  align-self: flex-start;
   max-width: 28rem;
-  flex-direction: column;
 }
-
 .form-control {
-  /* flex: 1 1 auto; */
+  flex: 1 1 auto;
   color: var(--clr-grey-5);
 }
 .form-control,
 .btn-submit {
-  padding: 0.75rem;
+  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 300;
   letter-spacing: var(--spacing);
   background: var(--clr-white);
   text-transform: capitalize;
+  outline: none;
   border: transparent;
-  width: 100%;
-  display: block;
-  margin-left: 0;
 }
-
-.form-control::-webkit-input-placeholder {
+::placeholder {
   color: inherit;
 }
-
-.form-control::-moz-placeholder {
-  color: inherit;
-}
-
-.form-control:-ms-input-placeholder {
-  color: inherit;
-}
-
-.form-control::-ms-input-placeholder {
-  color: inherit;
-}
-
-.form-control::placeholder {
-  color: inherit;
-}
-
 .btn-submit {
   font-family: var(--ff-primary);
   margin-left: 0.5rem;
   background: var(--clr-primary-8);
   color: var(--clr-primary-1);
   cursor: pointer;
-  transform: var(--transition);
+  transition: var(--transition);
 }
 .btn-submit:hover {
   background: var(--clr-primary-1);
   color: var(--clr-primary-5);
 }
-
 @media screen and (min-width: 992px) {
   .contact-center {
     display: flex;
@@ -614,10 +592,9 @@ Contact
     justify-content: space-between;
   }
   .contact-form {
-    align-self: flex-start;
     flex: 1 1 auto;
-    max-width: 60%;
-    /* padding-left: 2rem; */
+    padding-left: 2rem;
+    max-width: 100%;
   }
 }
 
